# backend

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: publish-image-ci.yaml  testing-ci.yaml
app/: main.py  utils.py
app/config/: config.py
app/database/: __init__.py  db_factory.py  initialize_data.py  models.py  utils.py
app/resources/: cartas.csv
app/routers/cards/: cards.py  schemas.py  services.py  utils.py
app/routers/games/: action_functions.py  defense_functions.py  games.py  intention.py  panic_functions.py  schemas.py  services.py  utils.py
app/routers/players/: players.py  schemas.py  services.py  utils.py
app/routers/websockets/: services.py  utils.py  websockets.py
app/tests/: test_games.py
app/tests/card_tests/: test_cards_services.py  test_cards_utils.py  test_create_cards.py  test_delete_cards.py  test_get_cards.py  test_patch_cards.py
app/tests/game_tests/: test_cancel_games.py  test_creation_of_games.py  test_delete_of_games.py  test_draw_card.py  test_find_game_by_name.py  test_finish_game.py  test_game_discard.py  test_game_information.py  test_init_of_games.py  test_join_players.py  test_leave_games.py  test_list_of_games.py  test_play_action_card.py  test_play_panic_card.py  test_update_game.py
app/tests/player_tests/: test_create_player.py  test_delete_player.py  test_get_player_hand.py  test_players_schemas.py  test_players_utils.py  test_read_player.py  test_update_player.py
