[tool.poetry]
name = "lacosa-env"
version = "0.1.0"
description = ""
authors = ["Ignacio <ignabelitzky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.11"
fastapi = "^0.103.1"
uvicorn = "^0.15.0"
pony = "^0.7.16"
pydantic-settings = "^2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
